k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soberano-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - app.soberanocontabil.com.br
    secretName: soberano-tls-secret
  rules:
  - host: app.soberanocontabil.com.br
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: soberano-api-service
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: soberano-web-service
            port:
              number: 80
